test/good/Negate.hs
module Negate where

negativeFive :: Int
negativeFive = -5

doubleNegate :: Int -> Int
doubleNegate x = -(-x)
