test/bad/check/BadSuper.hs
module BadSuper where

class (Int x) => Super x where
  a :: x
